--- a/frontend/vueproject/index.html
+++ b/frontend/vueproject/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/693587bdd8.js" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vueproject</title>
