--- a/frontend/vueproject/index.html
+++ b/frontend/vueproject/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <script src="https://kit.fontawesome.com/693587bdd8.js" crossorigin="anonymous"></script>
-    <!--<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>-->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vueproject</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="fr">
+
+<head>
+  <script src="https://kit.fontawesome.com/693587bdd8.js" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>vueproject</title>
+  <meta name="description" content="Groupomania réseau social">
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
